clarification on question

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="details-layout">
         <div class="information">
-          <p>How much Koin do you have?</p>
+          <p>How much Koin are you burning?</p>
           <input id="totalKoin" type="text" placeholder="KOIN" />
         </div>
         <div class="information">
